#--- cvs commit
# Apr, 21 2003
- site grpkill: kill all connected members from a group
- number of members connected at the same time can be limited for each group
- work on IPv6 compatibility
- crontab changed to accept classical crontab definition
  (min hour day month day_of_week)
- site grpren: rename group
- site grpdel removes all references to group, and send warnings if deletion
  creates users with no groups or changes user main group
- site wipe: delete file/dir recursively, without affecting user stats
- location pointer in file was shared by all clients connected to cache !
- fixed CRITICAL bug: context->datafd was closed without testing it, with a
  default value of 0 which IS a valid socket value !
- again, fixed problem when creating dir at the physical root of the server ...

#--- cvs commit
# Apr, 17 2003
- string analysis in cookie parser rewritten using a flex parser
  this has many benefits, allowing to use nested if/for statements, colors, etc.
- new flag FLAG_COLOR to enable colors in ftp answers (default: disabled)

# Apr, 14 2003
- user lose credits and stats when deleting files
- put permission files in cache (should speed up server a lot !)
- site kill/kick changed to use same code in all modes (mt/mp)

# Apr, 09 2003
- big patch to compile and run on OpenBSD
- sections, using path-filters to enforce dir names when created

# Apr, 07 2003
- build method changed to automake/autoconf
- backend and module directives in config file can handle absolute filenames
- new directive 'logfile' to change log file location
- new member 'credits' in user struct
- stats on number of files uploaded/downloaded
- new cookies: credits & credits2, last_login, files_dl, files_ul
- site give/take

#--- cvs commit
# Apr, 03 2003
- vfs: added a permission field, which allow per user/group/flag vfs
  (using same syntax as for site commands)
- backend plaintext: block signals when writing users file, to avoid being interrupted