@@ -64,7 +64,6 @@ current objectives:
 - per dir global permissions (to pass over rootpath)
 - VFS (virtual file system): system-wide vfs, group-wide vfs, or user vfs
 - use options in ls
-- hide some filenames in list: .dirinfo .dirmsg
 - modify checkpath to return 0 if ok and file exists, 1 if !ok, -1 if file does not
   exist but path was converted
 - bandwidth limit: add global limit / group limit
