@@ -182,7 +182,7 @@ int list(int sock,wzd_context_t * context,list_type_t format,char *directory,cha
     if (entr->d_name[0]=='.') {
       if (strcmp(entr->d_name,".")==0 ||
 	  strcmp(entr->d_name,"..")==0 ||
-	  strcmp(entr->d_name,HARD_PERMFILE)==0) /* XXX hide perm file ! */
+	  is_hidden_file(entr->d_name) )
 	  {
 	continue;
       }
